--- a/Notebooks/Plot_sweep_12X_e.ipynb
+++ b/Notebooks/Plot_sweep_12X_e.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -68,18 +68,18 @@
        "dict_keys(['idx', 'repetitions', 'n_layers_block', 'embedding_dim', 'model_uuid', 'best_loss_train', 'best_loss_test', 'loss_validation', 'time_train'])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tuple(sweep.points_w_data)[0].keys()"
+    "sweep.lists.keys()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -96,18 +96,11 @@
     }
    ],
    "source": [
-    "lists = {k: [] for k in tuple(sweep.points_w_data)[0].keys()}\n",
-    "for point in sweep.points_w_data:\n",
-    "    for key, value in point.items():\n",
-    "        lists[key].append(value)\n",
-    "\n",
-    "# all list to numpy array\n",
-    "for key, value in lists.items():\n",
-    "    lists[key] = np.array(value)\n",
+    "arrays = sweep.arrays\n",
     "\n",
     "# plot\n",
     "for i in [1,5]:\n",
-    "    plt.plot(lists['n_layers_block'][lists['embedding_dim']==i], lists['loss_validation'][lists['embedding_dim']==i], 'o', label='emedding dim {}'.format(i))\n",
+    "    plt.plot(arrays['n_layers_block'][arrays['embedding_dim']==i], arrays['loss_validation'][arrays['embedding_dim']==i], 'o', label='emedding dim {}'.format(i))\n",
     "plt.xlabel('n layers')\n",
     "plt.ylabel('loss validation')\n",
     "plt.legend()\n",
@@ -118,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
