--- a/Notebooks/_Connection.ipynb
+++ b/Notebooks/_Connection.ipynb
@@ -52,45 +52,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "remote: Enumerating objects: 34, done.\u001b[K\n",
-      "remote: Counting objects: 100% (34/34), done.\u001b[K\n",
-      "remote: Compressing objects: 100% (15/15), done.\u001b[K\n",
-      "remote: Total 26 (delta 13), reused 23 (delta 11), pack-reused 0\u001b[K\n",
-      "Unpacking objects: 100% (26/26), 4.83 MiB | 5.68 MiB/s, done.\n",
+      "remote: Enumerating objects: 18, done.\u001b[K\n",
+      "remote: Counting objects: 100% (18/18), done.\u001b[K\n",
+      "remote: Compressing objects: 100% (7/7), done.\u001b[K\n",
+      "remote: Total 12 (delta 5), reused 12 (delta 5), pack-reused 0\u001b[K\n",
+      "Unpacking objects: 100% (12/12), 145.20 KiB | 3.72 MiB/s, done.\n",
       "From github.com:raulconchello/peptide-QML\n",
-      "   21b5933ea..8b1eb4174  main       -> origin/main\n",
-      "Updating 21b5933ea..8b1eb4174\n",
+      "   37520a245..b15f9f590  main       -> origin/main\n",
+      "Updating 37520a245..b15f9f590\n",
       "Fast-forward\n",
-      " Notebooks/-data_create_object.ipynb                |     54 \u001b[32m+\u001b[m\u001b[31m-\u001b[m\n",
-      " Notebooks/Plot_sweep_12h_h_X.ipynb                 |     52 \u001b[32m+\u001b[m\u001b[31m-\u001b[m\n",
-      " Notebooks/Plots/Plot_sweep_12h_h_X.ipynb           |    288 \u001b[32m+\u001b[m\n",
-      " .../{load_sweep.ipynb => Sweeps/-load_sweep.ipynb} |     12 \u001b[31m-\u001b[m\n",
-      " Notebooks/{ => Sweeps}/sweep_12c_h.ipynb           |      0\n",
-      " Notebooks/Sweeps/sweep_12h_h_Am_Xqm.ipynb          |    539 \u001b[32m+\u001b[m\n",
-      " Notebooks/Sweeps/sweep_12h_h_Xqm.ipynb             |   2039 \u001b[32m+\u001b[m\n",
-      " Notebooks/_Connection.ipynb                        | 516737 \u001b[32m+++++++++++++++++\u001b[m\u001b[31m-\u001b[m\n",
-      " .../{nomenclature.ipynb => _nomenclature.ipynb}    |      0\n",
-      " Notebooks/sweep_12h_e_Am_Xqm.ipynb                 |     17 \u001b[32m+\u001b[m\u001b[31m-\u001b[m\n",
-      " Notebooks/sweep_12h_h_Am_Xqm.ipynb                 |   1581 \u001b[31m-\u001b[m\n",
-      " Notebooks/sweep_12h_h_Xqm.ipynb                    |    246 \u001b[31m-\u001b[m\n",
-      " Notebooks/tests.ipynb                              |    160 \u001b[32m+\u001b[m\u001b[31m-\u001b[m\n",
-      " my_code/pytorch_model.py                           |      5 \u001b[32m+\u001b[m\u001b[31m-\u001b[m\n",
-      " 14 files changed, 519784 insertions(+), 1946 deletions(-)\n",
-      " create mode 100644 Notebooks/Plots/Plot_sweep_12h_h_X.ipynb\n",
-      " rename Notebooks/{load_sweep.ipynb => Sweeps/-load_sweep.ipynb} (99%)\n",
-      " rename Notebooks/{ => Sweeps}/sweep_12c_h.ipynb (100%)\n",
-      " create mode 100644 Notebooks/Sweeps/sweep_12h_h_Am_Xqm.ipynb\n",
-      " create mode 100644 Notebooks/Sweeps/sweep_12h_h_Xqm.ipynb\n",
-      " rename Notebooks/{nomenclature.ipynb => _nomenclature.ipynb} (100%)\n",
-      " delete mode 100644 Notebooks/sweep_12h_h_Am_Xqm.ipynb\n",
-      " delete mode 100644 Notebooks/sweep_12h_h_Xqm.ipynb\n"
+      " Notebooks/Plot_sweep_12X_e.ipynb   |    186 \u001b[32m+\u001b[m\n",
+      " Notebooks/Plot_sweep_12h_h_X.ipynb |    288 \u001b[31m-\u001b[m\n",
+      " Notebooks/_Connection.ipynb        | 516765 \u001b[32m+\u001b[m\u001b[31m---------------------------------\u001b[m\n",
+      " Notebooks/sweep_12c_e.ipynb        |    236 \u001b[32m+\u001b[m\n",
+      " Notebooks/sweep_12c_e_v2.ipynb     |    295 \u001b[32m+\u001b[m\n",
+      " Notebooks/sweep_12h_e_Am_Xqm.ipynb |    149 \u001b[32m+\u001b[m\u001b[31m-\u001b[m\n",
+      " my_code/helper_classes.py          |     19 \u001b[32m+\u001b[m\n",
+      " 7 files changed, 897 insertions(+), 517041 deletions(-)\n",
+      " create mode 100644 Notebooks/Plot_sweep_12X_e.ipynb\n",
+      " delete mode 100644 Notebooks/Plot_sweep_12h_h_X.ipynb\n",
+      " create mode 100644 Notebooks/sweep_12c_e.ipynb\n",
+      " create mode 100644 Notebooks/sweep_12c_e_v2.ipynb\n"
      ]
     }
    ],
