--- a/Notebooks/sweep_12h_e_Am_Xqm_v2.ipynb
+++ b/Notebooks/sweep_12h_e_Am_Xqm_v2.ipynb
@@ -42,7 +42,7 @@
    "outputs": [],
    "source": [
     "# name of the notebook\n",
-    "name_notebook = \"sweep_12h_e_Am_Xqm\""
+    "name_notebook = \"sweep_12h_e_Am_Xqm_v2\""
    ]
   },
   {
@@ -51,15 +51,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sweep = c.Sweep(\n",
-    "#     name_notebook, \n",
-    "#     initial_path=initial_path,\n",
-    "#     description=\"Try to find the best measurement and number of layers for the quantum block using Amplitude Encoding and embedding.\",\n",
-    "#     repetitions=list(range(1, 3)),\n",
-    "#     n_layers_quantum_block=[1,2,5,12,20],\n",
-    "#     n_qubits=[4,6],\n",
-    "#     qubits_measurement=[1, 'all'],\n",
-    "# )"
+    "sweep = c.Sweep(\n",
+    "    name_notebook, \n",
+    "    initial_path=initial_path,\n",
+    "    description=\"Try to find the best measurement and number of layers for the quantum block using Amplitude Encoding (repeating embedding) and embedding.\",\n",
+    "    repetitions=list(range(1, 3)),\n",
+    "    n_layers_quantum_block=[2,12,20,25],\n",
+    "    embedding_n_layers=[1,2,3,4],\n",
+    ")"
    ]
   },
   {
@@ -68,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sweep.save()"
+    "sweep.save()"
    ]
   },
   {
@@ -77,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sweep = c.Sweep.load(file_name=name_notebook+\"-1\", day='0912', initial_path=initial_path)"
+    "# sweep = c.Sweep.load(file_name=name_notebook+\"-1\", day='0912', initial_path=initial_path)"
    ]
   },
   {
@@ -2086,11 +2085,7 @@
       " --- time reamining: 39:48:13.56 \n",
       "\n",
       "Epoch [0/2], Loss epoch: 0.2313, Loss validation: 0.2316\n",
-      "\t Validation string, \t i: 895; \t prediction: -0.3062, \t target: -0.1254, \t loss: 0.0327\n",
-      "\t Validation string, \t i: 2671; \t prediction: -0.3382, \t target: -0.4323, \t loss: 0.0089\n",
-      "\t Validation string, \t i: 2103; \t prediction: -0.3434, \t target: -0.4249, \t loss: 0.0066\n",
-      "Epoch [1/2], Loss epoch: 0.0086, Loss validation: 0.0082, Time remaining: ~0.0h 10.0m 13s\n",
-      " - Epoch [2/2], i: [171072/397780], Loss: 0.0088\r"
+      " - Epoch [1/2], i: [131680/397780], Loss: 0.0183\r"
      ]
     }
    ],
@@ -2101,17 +2096,17 @@
     "    sweep.print_sweep_status(sweep_point['idx'])\n",
     "\n",
     "    # -- QUANTUM BLOCK -- #\n",
-    "    n_qubits = sweep_point['n_qubits']\n",
+    "    n_qubits = 6\n",
     "    quantum_layer = q.circuit(\n",
     "        n_qubits = n_qubits, \n",
     "        device = \"default.qubit.torch\",\n",
     "        device_options = {'shots': None},\n",
     "        embedding = q.parts.AmplitudeEmbedding, \n",
-    "        # embedding_ansatz = q.parts.Ansatz_11,\n",
+    "        embedding_ansatz = q.parts.Ansatz_11,\n",
     "        block_ansatz = q.parts.Ansatz_11,\n",
-    "        final_ansatz = q.parts.Ansatz_11,\n",
-    "        measurement = q.parts.Measurement('Z', sweep_point['qubits_measurement']),\n",
-    "        # embedding_n_layers = 4,\n",
+    "        final_ansatz = q.parts.Ansatz_11, # TODO CHECK IF THIS IS THE BEST OPTION\n",
+    "        measurement = q.parts.Measurement('Z', 1),\n",
+    "        embedding_n_layers = sweep_point['embedding_n_layers'],\n",
     "        # different_inputs_per_layer = True,\n",
     "        block_n_layers = sweep_point['n_layers_quantum_block'],\n",
     "        # wrapper_qlayer = pw.QLayerEmpty,\n",
@@ -2121,13 +2116,12 @@
     "    class Model(m.Model):\n",
     "        def __init__(self):\n",
     "            super(Model, self).__init__()\n",
-    "            n_qubits_measured = n_qubits if sweep_point['qubits_measurement'] == 'all' else 1\n",
     "            embedding_dim = 2**n_qubits//12\n",
     "            self.fc1 = m.nn.Embedding(num_embeddings=19, embedding_dim=embedding_dim)\n",
     "            self.fc2 = m.Reshape()\n",
     "            self.fc3 = quantum_layer() \n",
-    "            self.fc4 = m.nn.Linear(n_qubits_measured, n_qubits_measured) \n",
-    "            self.fc5 = m.nn.Linear(n_qubits_measured, 1)\n",
+    "            self.fc4 = m.nn.Linear(1, 1) \n",
+    "            self.fc5 = m.nn.Linear(1, 1)\n",
     "\n",
     "        def forward(self, x):\n",
     "            x = self.fc1(x)\n",
@@ -2156,7 +2150,7 @@
     "    model.optimize_params(\n",
     "        #save info\n",
     "        save_model_info = True,\n",
-    "        description = 'sweep with 12 amino acids and {} qubits using Amplitude Encoding and classical Embedding'.format(n_qubits),    \n",
+    "        description = 'sweep with 12 amino acids and {} qubits using Amplitude Encoding (repeating embedding) and classical Embedding'.format(n_qubits),    \n",
     "        #data\n",
     "        data=c.Data.load(initial_path=initial_path, file_name='PET_SCORES_12_Numbers_int'),\n",
     "        # train options\n",
