--- a/Notebooks/_nomenclature.ipynb
+++ b/Notebooks/_nomenclature.ipynb
@@ -22,6 +22,7 @@
     "\n",
     "    - _Nothing_\n",
     "    - e: embedding\n",
+    "    - er: enbedding with repetition in the quantum circuit\n",
     "    - em: embedding that requires an input longer than n_qubits\n",
     "\n",
     "d ->\n",
