--- a/Notebooks/sweep_12h_er_Xqm.ipynb
+++ b/Notebooks/sweep_12h_er_Xqm.ipynb
@@ -10,7 +10,7 @@
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mFailed to connect to the remote Jupyter Server 'http://128.253.116.107:8000/'. Verify the server is running and reachable. (Failed to connect to the remote Jupyter Server 'http://128.253.116.107:8000/'. Verify the server is running and reachable. (request to http://128.253.116.107:8000/user/raul/api/kernels?1695046366234 failed, reason: connect ETIMEDOUT 128.253.116.107:8000).)."
+      "\u001b[1;31mFailed to connect to the remote Jupyter Server 'http://128.253.116.107:8000/'. Verify the server is running and reachable. (Failed to connect to the remote Jupyter Server 'http://128.253.116.107:8000/'. Verify the server is running and reachable. (request to http://128.253.116.107:8000/user/raul/api/kernels?1694816074797 failed, reason: connect ETIMEDOUT 128.253.116.107:8000).)."
      ]
     }
    ],
@@ -29,9 +29,7 @@
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mFailed to connect to the remote Jupyter Server '128.253.116.107'. Verify the server is running and reachable. (request to http://128.253.116.107:8000/hub/login?next= failed, reason: connect ETIMEDOUT 128.253.116.107:8000). \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "\u001b[1;31mFailed to connect to the remote Jupyter Server 'http://128.253.116.107:8000/'. Verify the server is running and reachable. (Failed to connect to the remote Jupyter Server 'http://128.253.116.107:8000/'. Verify the server is running and reachable. (request to http://128.253.116.107:8000/user/raul/api/kernels?1694816074797 failed, reason: connect ETIMEDOUT 128.253.116.107:8000).)."
      ]
     }
    ],
@@ -56,15 +54,13 @@
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mFailed to connect to the remote Jupyter Server '128.253.116.107'. Verify the server is running and reachable. (request to http://128.253.116.107:8000/hub/login?next= failed, reason: connect ETIMEDOUT 128.253.116.107:8000). \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "\u001b[1;31mFailed to connect to the remote Jupyter Server 'http://128.253.116.107:8000/'. Verify the server is running and reachable. (Failed to connect to the remote Jupyter Server 'http://128.253.116.107:8000/'. Verify the server is running and reachable. (request to http://128.253.116.107:8000/user/raul/api/kernels?1694816074797 failed, reason: connect ETIMEDOUT 128.253.116.107:8000).)."
      ]
     }
    ],
    "source": [
     "# name of the notebook\n",
-    "name_notebook = \"sweep_12h_e_Am_Xqm\""
+    "name_notebook = \"sweep_12h_er_Xqm\""
    ]
   },
   {
@@ -77,22 +73,19 @@
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mFailed to connect to the remote Jupyter Server '128.253.116.107'. Verify the server is running and reachable. (request to http://128.253.116.107:8000/hub/login?next= failed, reason: connect ETIMEDOUT 128.253.116.107:8000). \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "\u001b[1;31mFailed to connect to the remote Jupyter Server 'http://128.253.116.107:8000/'. Verify the server is running and reachable. (Failed to connect to the remote Jupyter Server 'http://128.253.116.107:8000/'. Verify the server is running and reachable. (request to http://128.253.116.107:8000/user/raul/api/kernels?1694816074797 failed, reason: connect ETIMEDOUT 128.253.116.107:8000).)."
      ]
     }
    ],
    "source": [
-    "# sweep = c.Sweep(\n",
-    "#     name_notebook, \n",
-    "#     initial_path=initial_path,\n",
-    "#     description=\"Try to find the best measurement and number of layers for the quantum block using Amplitude Encoding and embedding.\",\n",
-    "#     repetitions=list(range(1, 3)),\n",
-    "#     n_layers_quantum_block=[1,2,5,12,20],\n",
-    "#     n_qubits=[4,6],\n",
-    "#     qubits_measurement=[1, 'all'],\n",
-    "# )"
+    "sweep = c.Sweep(\n",
+    "    name_notebook, \n",
+    "    initial_path=initial_path,\n",
+    "    description=\"Try to find the best measurement and number of layers for the quantum block using Angle Encoding (repeating embedding) and embedding.\",\n",
+    "    repetitions=list(range(1, 3)),\n",
+    "    n_layers_quantum_block=[2,12,20,25],\n",
+    "    embedding_n_layers=[1,2,3,4],\n",
+    ")"
    ]
   },
   {
@@ -105,14 +98,12 @@
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mFailed to connect to the remote Jupyter Server '128.253.116.107'. Verify the server is running and reachable. (request to http://128.253.116.107:8000/hub/login?next= failed, reason: connect ETIMEDOUT 128.253.116.107:8000). \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "\u001b[1;31mFailed to connect to the remote Jupyter Server 'http://128.253.116.107:8000/'. Verify the server is running and reachable. (Failed to connect to the remote Jupyter Server 'http://128.253.116.107:8000/'. Verify the server is running and reachable. (request to http://128.253.116.107:8000/user/raul/api/kernels?1694816074797 failed, reason: connect ETIMEDOUT 128.253.116.107:8000).)."
      ]
     }
    ],
    "source": [
-    "# sweep.save()"
+    "sweep.save()"
    ]
   },
   {
@@ -125,14 +116,12 @@
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mFailed to connect to the remote Jupyter Server '128.253.116.107'. Verify the server is running and reachable. (request to http://128.253.116.107:8000/hub/login?next= failed, reason: connect ETIMEDOUT 128.253.116.107:8000). \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "\u001b[1;31mFailed to connect to the remote Jupyter Server 'http://128.253.116.107:8000/'. Verify the server is running and reachable. (Failed to connect to the remote Jupyter Server 'http://128.253.116.107:8000/'. Verify the server is running and reachable. (request to http://128.253.116.107:8000/user/raul/api/kernels?1694816074797 failed, reason: connect ETIMEDOUT 128.253.116.107:8000).)."
      ]
     }
    ],
    "source": [
-    "sweep = c.Sweep.load(file_name=name_notebook+\"-1\", day='0912', initial_path=initial_path)"
+    "# sweep = c.Sweep.load(file_name=name_notebook+\"-1\", day='0912', initial_path=initial_path)"
    ]
   },
   {
@@ -145,30 +134,28 @@
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mFailed to connect to the remote Jupyter Server '128.253.116.107'. Verify the server is running and reachable. (request to http://128.253.116.107:8000/hub/login?next= failed, reason: connect ETIMEDOUT 128.253.116.107:8000). \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "\u001b[1;31mFailed to connect to the remote Jupyter Server 'http://128.253.116.107:8000/'. Verify the server is running and reachable. (Failed to connect to the remote Jupyter Server 'http://128.253.116.107:8000/'. Verify the server is running and reachable. (request to http://128.253.116.107:8000/user/raul/api/kernels?1694816074797 failed, reason: connect ETIMEDOUT 128.253.116.107:8000).)."
      ]
     }
    ],
    "source": [
-    "for sweep_point in sweep.points_left:\n",
+    "for sweep_point in sweep:\n",
     "\n",
     "    # print the point of the sweep\n",
     "    sweep.print_sweep_status(sweep_point['idx'])\n",
     "\n",
     "    # -- QUANTUM BLOCK -- #\n",
-    "    n_qubits = sweep_point['n_qubits']\n",
+    "    n_qubits = 6\n",
     "    quantum_layer = q.circuit(\n",
     "        n_qubits = n_qubits, \n",
     "        device = \"default.qubit.torch\",\n",
     "        device_options = {'shots': None},\n",
-    "        embedding = q.parts.AmplitudeEmbedding, \n",
-    "        # embedding_ansatz = q.parts.Ansatz_11,\n",
+    "        embedding = q.parts.AngleEmbedding, \n",
+    "        embedding_ansatz = q.parts.Ansatz_11,\n",
     "        block_ansatz = q.parts.Ansatz_11,\n",
-    "        final_ansatz = q.parts.Ansatz_11,\n",
-    "        measurement = q.parts.Measurement('Z', sweep_point['qubits_measurement']),\n",
-    "        # embedding_n_layers = 4,\n",
+    "        final_ansatz = q.parts.Ansatz_11, # TODO CHECK IF THIS IS THE BEST OPTION\n",
+    "        measurement = q.parts.Measurement('Z', 'All'),\n",
+    "        embedding_n_layers = sweep_point['embedding_n_layers'],\n",
     "        # different_inputs_per_layer = True,\n",
     "        block_n_layers = sweep_point['n_layers_quantum_block'],\n",
     "        # wrapper_qlayer = pw.QLayerEmpty,\n",
@@ -178,20 +165,16 @@
     "    class Model(m.Model):\n",
     "        def __init__(self):\n",
     "            super(Model, self).__init__()\n",
-    "            n_qubits_measured = n_qubits if sweep_point['qubits_measurement'] == 'all' else 1\n",
-    "            embedding_dim = 2**n_qubits//12\n",
-    "            self.fc1 = m.nn.Embedding(num_embeddings=19, embedding_dim=embedding_dim)\n",
+    "            self.fc1 = m.nn.Embedding(num_embeddings=19, embedding_dim=1)\n",
     "            self.fc2 = m.Reshape()\n",
-    "            self.fc3 = quantum_layer() \n",
-    "            self.fc4 = m.nn.Linear(n_qubits_measured, n_qubits_measured) \n",
-    "            self.fc5 = m.nn.Linear(n_qubits_measured, 1)\n",
+    "            block = [m.nn.Linear(12, 6), m.nn.Sigmoid(), m.nn.Linear(6, 6)]\n",
+    "            block += quantum_layer() \n",
+    "            block += [m.nn.Linear(6, 6), m.nn.Sigmoid(), m.nn.Linear(6, 1)]\n",
+    "            self.fc3 = m.nn.Sequential(*block)\n",
     "\n",
     "        def forward(self, x):\n",
-    "            x = self.fc1(x)\n",
-    "            x = self.fc2(x)\n",
-    "            x = self.fc3(x)\n",
-    "            x = m.torch.sigmoid(self.fc4(x))\n",
-    "            x = self.fc5(x)\n",
+    "            for i in range(1,3):\n",
+    "                x = getattr(self, 'fc{}'.format(i))(x)\n",
     "            return x\n",
     "\n",
     "    model = Model()\n",
@@ -213,7 +196,7 @@
     "    model.optimize_params(\n",
     "        #save info\n",
     "        save_model_info = True,\n",
-    "        description = 'sweep with 12 amino acids and {} qubits using Amplitude Encoding and classical Embedding'.format(n_qubits),    \n",
+    "        description = 'sweep with 12 amino acids and {} qubits using Angle Encoding (repeating embedding) and classical Embedding'.format(n_qubits),    \n",
     "        #data\n",
     "        data=c.Data.load(initial_path=initial_path, file_name='PET_SCORES_12_Numbers_int'),\n",
     "        # train options\n",
@@ -267,9 +250,7 @@
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mFailed to connect to the remote Jupyter Server '128.253.116.107'. Verify the server is running and reachable. (request to http://128.253.116.107:8000/hub/login?next= failed, reason: connect ETIMEDOUT 128.253.116.107:8000). \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "\u001b[1;31mFailed to connect to the remote Jupyter Server 'http://128.253.116.107:8000/'. Verify the server is running and reachable. (Failed to connect to the remote Jupyter Server 'http://128.253.116.107:8000/'. Verify the server is running and reachable. (request to http://128.253.116.107:8000/user/raul/api/kernels?1694816074797 failed, reason: connect ETIMEDOUT 128.253.116.107:8000).)."
      ]
     }
    ],
