--- a/Notebooks/sweep_12h_e_Am_Xqm.ipynb
+++ b/Notebooks/sweep_12h_e_Am_Xqm.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to connect to the remote Jupyter Server 'http://128.253.116.107:8000/'. Verify the server is running and reachable. (Failed to connect to the remote Jupyter Server 'http://128.253.116.107:8000/'. Verify the server is running and reachable. (request to http://128.253.116.107:8000/user/raul/api/kernels?1695046366234 failed, reason: connect ETIMEDOUT 128.253.116.107:8000).)."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "initial_path = 'peptide-QML'\n",
     "# initial_path = '..'"
@@ -21,20 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mFailed to connect to the remote Jupyter Server '128.253.116.107'. Verify the server is running and reachable. (request to http://128.253.116.107:8000/hub/login?next= failed, reason: connect ETIMEDOUT 128.253.116.107:8000). \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append(initial_path)\n",
@@ -48,20 +28,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mFailed to connect to the remote Jupyter Server '128.253.116.107'. Verify the server is running and reachable. (request to http://128.253.116.107:8000/hub/login?next= failed, reason: connect ETIMEDOUT 128.253.116.107:8000). \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# name of the notebook\n",
     "name_notebook = \"sweep_12h_e_Am_Xqm\""
@@ -69,20 +38,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mFailed to connect to the remote Jupyter Server '128.253.116.107'. Verify the server is running and reachable. (request to http://128.253.116.107:8000/hub/login?next= failed, reason: connect ETIMEDOUT 128.253.116.107:8000). \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# sweep = c.Sweep(\n",
     "#     name_notebook, \n",
@@ -97,60 +55,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mFailed to connect to the remote Jupyter Server '128.253.116.107'. Verify the server is running and reachable. (request to http://128.253.116.107:8000/hub/login?next= failed, reason: connect ETIMEDOUT 128.253.116.107:8000). \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# sweep.save()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mFailed to connect to the remote Jupyter Server '128.253.116.107'. Verify the server is running and reachable. (request to http://128.253.116.107:8000/hub/login?next= failed, reason: connect ETIMEDOUT 128.253.116.107:8000). \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sweep = c.Sweep.load(file_name=name_notebook+\"-1\", day='0912', initial_path=initial_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mFailed to connect to the remote Jupyter Server '128.253.116.107'. Verify the server is running and reachable. (request to http://128.253.116.107:8000/hub/login?next= failed, reason: connect ETIMEDOUT 128.253.116.107:8000). \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for sweep_point in sweep.points_left:\n",
     "\n",
@@ -261,18 +186,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mFailed to connect to the remote Jupyter Server '128.253.116.107'. Verify the server is running and reachable. (request to http://128.253.116.107:8000/hub/login?next= failed, reason: connect ETIMEDOUT 128.253.116.107:8000). \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   }
  ],
@@ -281,6 +195,18 @@
    "display_name": "JL_Pennylane",
    "language": "python",
    "name": "jl_pennylane"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
