--- a/Notebooks/sweep_12h_er_Xqm.ipynb
+++ b/Notebooks/sweep_12h_er_Xqm.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to connect to the remote Jupyter Server 'http://128.253.116.107:8000/'. Verify the server is running and reachable. (Failed to connect to the remote Jupyter Server 'http://128.253.116.107:8000/'. Verify the server is running and reachable. (request to http://128.253.116.107:8000/user/raul/api/kernels?1694816074797 failed, reason: connect ETIMEDOUT 128.253.116.107:8000).)."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "initial_path = 'peptide-QML'\n",
     "# initial_path = '..'"
@@ -21,18 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to connect to the remote Jupyter Server 'http://128.253.116.107:8000/'. Verify the server is running and reachable. (Failed to connect to the remote Jupyter Server 'http://128.253.116.107:8000/'. Verify the server is running and reachable. (request to http://128.253.116.107:8000/user/raul/api/kernels?1694816074797 failed, reason: connect ETIMEDOUT 128.253.116.107:8000).)."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append(initial_path)\n",
@@ -46,18 +28,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to connect to the remote Jupyter Server 'http://128.253.116.107:8000/'. Verify the server is running and reachable. (Failed to connect to the remote Jupyter Server 'http://128.253.116.107:8000/'. Verify the server is running and reachable. (request to http://128.253.116.107:8000/user/raul/api/kernels?1694816074797 failed, reason: connect ETIMEDOUT 128.253.116.107:8000).)."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# name of the notebook\n",
     "name_notebook = \"sweep_12h_er_Xqm\""
@@ -65,76 +38,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to connect to the remote Jupyter Server 'http://128.253.116.107:8000/'. Verify the server is running and reachable. (Failed to connect to the remote Jupyter Server 'http://128.253.116.107:8000/'. Verify the server is running and reachable. (request to http://128.253.116.107:8000/user/raul/api/kernels?1694816074797 failed, reason: connect ETIMEDOUT 128.253.116.107:8000).)."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sweep = c.Sweep(\n",
-    "    name_notebook, \n",
-    "    initial_path=initial_path,\n",
-    "    description=\"Try to find the best measurement and number of layers for the quantum block using Angle Encoding (repeating embedding) and embedding.\",\n",
-    "    repetitions=list(range(1, 3)),\n",
-    "    n_layers_quantum_block=[2,12,20,25],\n",
-    "    embedding_n_layers=[1,2,3,4],\n",
-    ")"
+    "# sweep = c.Sweep(\n",
+    "#     name_notebook, \n",
+    "#     initial_path=initial_path,\n",
+    "#     description=\"Try to find the best measurement and number of layers for the quantum block using Angle Encoding (repeating embedding) and embedding.\",\n",
+    "#     repetitions=list(range(1, 3)),\n",
+    "#     n_layers_quantum_block=[2,10,20],\n",
+    "#     embedding_n_layers=[1,2,3,4],\n",
+    "#     embedding_dim=[1,5],\n",
+    "# )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to connect to the remote Jupyter Server 'http://128.253.116.107:8000/'. Verify the server is running and reachable. (Failed to connect to the remote Jupyter Server 'http://128.253.116.107:8000/'. Verify the server is running and reachable. (request to http://128.253.116.107:8000/user/raul/api/kernels?1694816074797 failed, reason: connect ETIMEDOUT 128.253.116.107:8000).)."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sweep.save()"
+    "# sweep.save()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to connect to the remote Jupyter Server 'http://128.253.116.107:8000/'. Verify the server is running and reachable. (Failed to connect to the remote Jupyter Server 'http://128.253.116.107:8000/'. Verify the server is running and reachable. (request to http://128.253.116.107:8000/user/raul/api/kernels?1694816074797 failed, reason: connect ETIMEDOUT 128.253.116.107:8000).)."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# sweep = c.Sweep.load(file_name=name_notebook+\"-1\", day='0912', initial_path=initial_path)"
+    "sweep = c.Sweep.load(file_name=name_notebook+\"-1\", day='0918', initial_path=initial_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      " --- SWEEP POINT 1/48: (1, 2, 1, 1) ---\n",
+      " --- parameters sweeping: ['repetitions', 'n_layers_quantum_block', 'embedding_n_layers', 'embedding_dim'] \n",
+      "\n",
+      "Folder 'peptide-QML/saved/Models/0918/' created successfully.\n",
+      "Epoch [0/2], Loss epoch: 1.4568, Loss validation: 1.4684\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib/python3/dist-packages/torch/nn/modules/loss.py:528: UserWarning: Using a target size (torch.Size([397780, 1])) that is different to the input size (torch.Size([397780, 12])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "  return F.mse_loss(input, target, reduction=self.reduction)\n",
+      "/usr/lib/python3/dist-packages/torch/nn/modules/loss.py:528: UserWarning: Using a target size (torch.Size([4419, 1])) that is different to the input size (torch.Size([4419, 12])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "  return F.mse_loss(input, target, reduction=self.reduction)\n",
+      "/usr/lib/python3/dist-packages/torch/nn/modules/loss.py:528: UserWarning: Using a target size (torch.Size([32, 1])) that is different to the input size (torch.Size([32, 12])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "  return F.mse_loss(input, target, reduction=self.reduction)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " - Epoch [1/2], i: [397792/397780], Loss: 0.0193\r"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib/python3/dist-packages/torch/nn/modules/loss.py:528: UserWarning: Using a target size (torch.Size([20, 1])) that is different to the input size (torch.Size([20, 12])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "  return F.mse_loss(input, target, reduction=self.reduction)\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "only one element tensors can be converted to Python scalars",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mFailed to connect to the remote Jupyter Server 'http://128.253.116.107:8000/'. Verify the server is running and reachable. (Failed to connect to the remote Jupyter Server 'http://128.253.116.107:8000/'. Verify the server is running and reachable. (request to http://128.253.116.107:8000/user/raul/api/kernels?1694816074797 failed, reason: connect ETIMEDOUT 128.253.116.107:8000).)."
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-591c5090e7a4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     52\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     53\u001b[0m     \u001b[0;31m# -- TRAIN -- #\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 54\u001b[0;31m     model.optimize_params(\n\u001b[0m\u001b[1;32m     55\u001b[0m         \u001b[0;31m#save info\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m         \u001b[0msave_model_info\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/peptide-QML/my_code/pytorch_model.py\u001b[0m in \u001b[0;36moptimize_params\u001b[0;34m(self, save_model_info, description, data, loss_function, optimizer, optimizer_options, num_epochs, batch_size, print_batch, keep_track_params, validation_pct, validation_print_n, stop_training_options, metadata)\u001b[0m\n\u001b[1;32m    230\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    231\u001b[0m                 print('\\t Validation string, \\t i: {}; \\t prediction: {:.4f}, \\t target: {:.4f}, \\t loss: {:.4f}'.format(\n\u001b[0;32m--> 232\u001b[0;31m                     i, prediction.item(), target.item(), self.loss_function(prediction, target).item()))\n\u001b[0m\u001b[1;32m    233\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    234\u001b[0m             \u001b[0;31m#time\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: only one element tensors can be converted to Python scalars"
      ]
     }
    ],
@@ -165,12 +156,11 @@
     "    class Model(m.Model):\n",
     "        def __init__(self):\n",
     "            super(Model, self).__init__()\n",
-    "            self.fc1 = m.nn.Embedding(num_embeddings=19, embedding_dim=1)\n",
+    "            self.fc1 = m.nn.Embedding(num_embeddings=19, embedding_dim=sweep_point['embedding_dim'])\n",
     "            self.fc2 = m.Reshape()\n",
-    "            block = [m.nn.Linear(12, 6), m.nn.Sigmoid(), m.nn.Linear(6, 6)]\n",
-    "            block += quantum_layer() \n",
-    "            block += [m.nn.Linear(6, 6), m.nn.Sigmoid(), m.nn.Linear(6, 1)]\n",
-    "            self.fc3 = m.nn.Sequential(*block)\n",
+    "            self.fc3 = m.nn.Sequential(*[m.nn.Linear(12*sweep_point['embedding_dim'], 6), m.nn.Sigmoid(), m.nn.Linear(6, 6)])\n",
+    "            self.fc4 = quantum_layer()            \n",
+    "            self.fc5 = m.nn.Sequential(*[m.nn.Linear(6, 6), m.nn.Sigmoid(), m.nn.Linear(6, 1)])\n",
     "\n",
     "        def forward(self, x):\n",
     "            for i in range(1,3):\n",
@@ -262,6 +252,18 @@
    "display_name": "JL_Pennylane",
    "language": "python",
    "name": "jl_pennylane"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
