--- a/Notebooks/_Connection.ipynb
+++ b/Notebooks/_Connection.ipynb
@@ -121,24 +121,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "remote: Enumerating objects: 7, done.\u001b[K\n",
-      "remote: Counting objects: 100% (7/7), done.\u001b[K\n",
-      "remote: Compressing objects: 100% (1/1), done.\u001b[K\n",
-      "remote: Total 4 (delta 3), reused 4 (delta 3), pack-reused 0\u001b[K\n",
-      "Unpacking objects: 100% (4/4), 389 bytes | 55.00 KiB/s, done.\n",
+      "remote: Enumerating objects: 22, done.\u001b[K\n",
+      "remote: Counting objects: 100% (22/22), done.\u001b[K\n",
+      "remote: Compressing objects: 100% (7/7), done.\u001b[K\n",
+      "remote: Total 14 (delta 7), reused 14 (delta 7), pack-reused 0\u001b[K\n",
+      "Unpacking objects: 100% (14/14), 654.05 KiB | 5.54 MiB/s, done.\n",
       "From github.com:raulconchello/peptide-QML\n",
-      "   109bf6857..9a005d103  main       -> origin/main\n",
-      "Updating 109bf6857..9a005d103\n",
+      "   1279c5cb8..0eead819d  main       -> origin/main\n",
+      "Updating 1279c5cb8..0eead819d\n",
       "Fast-forward\n",
-      " my_code/quantum_nodes.py | 5 \u001b[32m++++\u001b[m\u001b[31m-\u001b[m\n",
-      " 1 file changed, 4 insertions(+), 1 deletion(-)\n"
+      " Notebooks/{ => Plots}/Plot_sweep_12X_e.ipynb |   0\n",
+      " Notebooks/Plots/Plot_sweep_12X_er_Xqm.ipynb  | 305 \u001b[32m+++++++++++++++++++++++++++\u001b[m\n",
+      " Notebooks/sweep_12h_er_Xqm.ipynb             | 219 \u001b[32m++++++++++++++\u001b[m\u001b[31m-----\u001b[m\n",
+      " Notebooks/sweep_12h_er_Xqm_v2.ipynb          | 216 \u001b[32m+++++++++++++++++++\u001b[m\n",
+      " Notebooks/sweep_12h_er_Xqm_v3.ipynb          | 264 \u001b[32m+++++++++++++++++++++++\u001b[m\n",
+      " Notebooks/test quantum circuit.ipynb         | 115 \u001b[32m++++++++\u001b[m\u001b[31m--\u001b[m\n",
+      " my_code/helper_classes.py                    |  35 \u001b[32m++\u001b[m\u001b[31m-\u001b[m\n",
+      " my_code/helper_functions.py                  |  36 \u001b[32m++++\u001b[m\n",
+      " 8 files changed, 1113 insertions(+), 77 deletions(-)\n",
+      " rename Notebooks/{ => Plots}/Plot_sweep_12X_e.ipynb (100%)\n",
+      " create mode 100644 Notebooks/Plots/Plot_sweep_12X_er_Xqm.ipynb\n",
+      " create mode 100644 Notebooks/sweep_12h_er_Xqm_v2.ipynb\n",
+      " create mode 100644 Notebooks/sweep_12h_er_Xqm_v3.ipynb\n"
      ]
     }
    ],
