--- a/Notebooks/-data_create_object.ipynb
+++ b/Notebooks/-data_create_object.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,15 +12,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/usr/lib/python3/dist-packages/requests/__init__.py:89: RequestsDependencyWarning: urllib3 (2.0.4) or chardet (3.0.4) doesn't match a supported version!\n",
-      "  warnings.warn(\"urllib3 ({}) or chardet ({}) doesn't match a supported \"\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
@@ -37,19 +37,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_file_path = '{}/data/Scores/PET/PET_SCORES.csv'.format(initial_path)\n",
+    "data_file_path = '{}/data/Scores/PE/PE_4AA_SCORES_polished.csv'.format(initial_path)\n",
     "string_list, number_list = f.read_data_file(\n",
     "    data_file_path,\n",
     "    skip_first_line=True, \n",
-    "    delimiter=', ', \n",
+    "    delimiter=',', \n",
     "    columns_to_return=[1, 2],\n",
     "    which_columns_are_numbers=[2]\n",
     "    )\n",
-    "score_list = np.array(number_list)/100\n",
+    "score_list = np.array(number_list)\n",
     "vector_list = np.array([f.string_to_numbers(string) for string in string_list]) \n",
     "\n",
     "# Create data object\n",
@@ -61,52 +61,10 @@
     "    },\n",
     "    tensors_type_x = 'int',\n",
     "    tensors_type_y = 'float64',\n",
-    "    description='PET Scores for 12 amino acids; no geometry fixed',\n",
-    "    original_data_file='PET/PET_SCORES.csv',\n",
-    "    n_aminoacids=12,\n",
+    "    description='PE Scores for 4 amino acids; no geometry fixed',\n",
+    "    original_data_file='PE/PE_4AA_SCORES_polished.csv',\n",
+    "    n_aminoacids=4,\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(UUID('ddc287f5-506b-441f-a903-6f2f336e69cd'),\n",
-       " torch.Size([397780, 12]),\n",
-       " torch.Size([397780, 1]),\n",
-       " torch.Size([44198, 12]),\n",
-       " torch.Size([44198, 1]))"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.uuid, data.x_train.shape, data.y_train.shape, data.x_test.shape, data.y_test.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.save(initial_path=initial_path, file_name='PET_SCORES_12_Numbers_int')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_data = c.Data.load(initial_path=initial_path, file_name='PET_SCORES_12_Numbers_int')"
    ]
   },
   {
@@ -117,7 +75,11 @@
     {
      "data": {
       "text/plain": [
-       "UUID('ddc287f5-506b-441f-a903-6f2f336e69cd')"
+       "(UUID('d33f26cf-dd5b-4712-8e44-62df3529f5ff'),\n",
+       " torch.Size([4779, 4]),\n",
+       " torch.Size([4779, 1]),\n",
+       " torch.Size([531, 4]),\n",
+       " torch.Size([531, 1]))"
       ]
      },
      "execution_count": 7,
@@ -126,7 +88,25 @@
     }
    ],
    "source": [
-    "new_data.uuid"
+    "data.uuid, data.x_train.shape, data.y_train.shape, data.x_test.shape, data.y_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.save(initial_path=initial_path, file_name='PE_SCORES_4_Numbers')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_data = c.Data.load(initial_path=initial_path, file_name='PE_SCORES_4_Numbers')"
    ]
   },
   {
@@ -137,16 +117,36 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[15, 10, 13,  ...,  3, 12,  9],\n",
-       "        [ 5, 10,  9,  ...,  7, 11,  1],\n",
-       "        [ 5,  5, 11,  ...,  2, 13, 12],\n",
-       "        ...,\n",
-       "        [ 4,  4, 12,  ..., 12,  0,  3],\n",
-       "        [18,  6,  4,  ...,  3,  0,  9],\n",
-       "        [ 8, 13, 13,  ..., 18,  8, 13]], dtype=torch.int32)"
+       "UUID('d33f26cf-dd5b-4712-8e44-62df3529f5ff')"
       ]
      },
      "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_data.uuid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[10, 13, 18, 10],\n",
+       "        [ 9, 10, 14, 13],\n",
+       "        [14, 10,  4, 12],\n",
+       "        ...,\n",
+       "        [ 5, 13, 13, 10],\n",
+       "        [ 5, 11, 12, 13],\n",
+       "        [14, 12, 11,  7]], dtype=torch.int32)"
+      ]
+     },
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
