--- a/Notebooks/sweep_4h_er_Xqm_v2_.ipynb
+++ b/Notebooks/sweep_4h_er_Xqm_v2_.ipynb
@@ -33,7 +33,7 @@
    "outputs": [],
    "source": [
     "# name of the notebook\n",
-    "name_notebook = \"sweep_12h_er_Xqm\""
+    "name_notebook = \"sweep_4h_er_Xqm_v2\""
    ]
   },
   {
@@ -45,11 +45,11 @@
     "# sweep = c.Sweep(\n",
     "#     name_notebook, \n",
     "#     initial_path=initial_path,\n",
-    "#     description=\"Try to find the best measurement and number of layers for the quantum block using Angle Encoding (repeating embedding) and embedding.\",\n",
-    "#     repetitions=list(range(1, 3)),\n",
-    "#     n_layers_quantum_block=[2,10,20],\n",
-    "#     embedding_n_layers=[0,1,2,3],\n",
-    "#     embedding_dim=[1,5],\n",
+    "#     description=\"4aa (8qubits) Try to find the best measurement and number of layers for the quantum block using Angle Encoding and embedding dim=2.\",\n",
+    "#     repetitions=list(range(1, 4)),\n",
+    "#     quantum_n_layers=[1,3,5,10,20],\n",
+    "#     quantum_measurement=[1,'all'],\n",
+    "#     embedding_n_layers=[0,1,2,4,6],\n",
     "# )"
    ]
   },
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sweep = c.Sweep.load(file_name=name_notebook+\"-2\", day='0918', initial_path=initial_path)"
+    "sweep = c.Sweep.load(file_name=name_notebook+\"-2\", day='0921', initial_path=initial_path)"
    ]
   },
   {
@@ -82,9 +82,25 @@
      "text": [
       "\n",
       "\n",
-      " --- SWEEP POINT 22/48: (1, 20, 2, 5) ---\n",
-      " --- time reamining: 88:23:59.94 \n",
+      " --- SWEEP POINT 1/150: (1, 1, 1, 0) ---\n",
+      " --- parameters sweeping: ['repetitions', 'quantum_n_layers', 'quantum_measurement', 'embedding_n_layers'] \n",
       "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [0/10], Loss epoch: 21.8247, Loss validation: 33.4402\n",
+      "\t Validation string, \t i: 9; \t prediction: 0.5531, \t target: -0.6800, \t loss: 1.5205\n",
+      "\t Validation string, \t i: 22; \t prediction: -0.7616, \t target: 0.9700, \t loss: 2.9984\n",
+      "\t Validation string, \t i: 2; \t prediction: -0.5178, \t target: -0.6300, \t loss: 0.0126\n",
+      "Epoch [1/10], Loss epoch: 18.5708, Loss validation: 22.7104, Time remaining: ~0.0h 2.0m 14s\n",
+      "\t Validation string, \t i: 4; \t prediction: -0.3809, \t target: -3.9600, \t loss: 12.8100\n",
+      "\t Validation string, \t i: 48; \t prediction: -1.5724, \t target: -8.6300, \t loss: 49.8090\n",
+      "\t Validation string, \t i: 6; \t prediction: -0.8887, \t target: -0.1200, \t loss: 0.5909\n",
+      "Epoch [2/10], Loss epoch: 15.8108, Loss validation: 20.2584, Time remaining: ~0.0h 1.0m 37s\n",
+      " - Epoch [3/10], i: [2208/4779], Loss: 14.0299\r"
      ]
     }
    ],
@@ -95,7 +111,7 @@
     "    sweep.print_sweep_status(sweep_point['idx'])\n",
     "\n",
     "    # -- QUANTUM BLOCK -- #\n",
-    "    n_qubits = 6\n",
+    "    n_qubits = 8\n",
     "    quantum_layer = q.circuit(\n",
     "        n_qubits = n_qubits, \n",
     "        device = \"default.qubit.torch\",\n",
@@ -104,10 +120,10 @@
     "        embedding_ansatz = q.parts.Ansatz_11,\n",
     "        block_ansatz = q.parts.Ansatz_11,\n",
     "        final_ansatz = q.parts.Ansatz_11, # TODO CHECK IF THIS IS THE BEST OPTION\n",
-    "        measurement = q.parts.Measurement('Z', 'all'),\n",
+    "        measurement = q.parts.Measurement('Z', sweep_point['quantum_measurement']),\n",
     "        embedding_n_layers = sweep_point['embedding_n_layers'],\n",
     "        different_inputs_per_layer = False,\n",
-    "        block_n_layers = sweep_point['n_layers_quantum_block'],\n",
+    "        block_n_layers = sweep_point['quantum_n_layers'],\n",
     "        # wrapper_qlayer = pw.QLayerEmpty,\n",
     "    )\n",
     "\n",
@@ -115,14 +131,16 @@
     "    class Model(m.Model):\n",
     "        def __init__(self):\n",
     "            super(Model, self).__init__()\n",
-    "            self.fc1 = m.nn.Embedding(num_embeddings=19, embedding_dim=sweep_point['embedding_dim'])\n",
+    "            self.fc1 = m.nn.Embedding(num_embeddings=19, embedding_dim=2)\n",
     "            self.fc2 = m.Reshape()\n",
-    "            self.fc3 = m.nn.Sequential(*[m.nn.Linear(12*sweep_point['embedding_dim'], 6), m.nn.Sigmoid(), m.nn.Linear(6, 6)])\n",
-    "            self.fc4 = quantum_layer()            \n",
-    "            self.fc5 = m.nn.Sequential(*[m.nn.Linear(6, 6), m.nn.Sigmoid(), m.nn.Linear(6, 1)])\n",
+    "            self.fc3 = quantum_layer()     \n",
+    "            if sweep_point['quantum_measurement'] == 'all':     \n",
+    "                self.fc4 = m.nn.Linear(n_qubits, 1)\n",
+    "            else:\n",
+    "                self.fc4 = m.nn.Linear(1, 1)\n",
     "\n",
     "        def forward(self, x):\n",
-    "            for i in range(1,6):\n",
+    "            for i in range(1,5):\n",
     "                x = getattr(self, 'fc{}'.format(i))(x)\n",
     "            return x\n",
     "\n",
@@ -145,17 +163,17 @@
     "    model.optimize_params(\n",
     "        #save info\n",
     "        save_model_info = True,\n",
-    "        description = 'sweep with 12 amino acids and {} qubits using Angle Encoding (repeating embedding) and classical Embedding'.format(n_qubits),    \n",
+    "        description = 'sweep with 4 amino acids and 4 qubits using Angle Encoding (repeating embedding) and classical Embedding',    \n",
     "        #data\n",
-    "        data=c.Data.load(initial_path=initial_path, file_name='PET_SCORES_12_Numbers_int'),\n",
+    "        data=c.Data.load(initial_path=initial_path, file_name='PE_SCORES_4_Numbers'),\n",
     "        # train options\n",
     "        optimizer = m.optim.Adam,\n",
     "        optimizer_options = {'lr': 0.01},\n",
-    "        num_epochs = 2,                \n",
+    "        num_epochs = 10,                \n",
     "        batch_size = 32,\n",
     "        # early stopping options\n",
     "        stop_training_options = {\n",
-    "            'lookback_epochs': 5, \n",
+    "            'lookback_epochs': 3, \n",
     "            'threshold_slope': 0.001,\n",
     "            'threshold_std_dev': 0.2\n",
     "        },\n",
