--- a/Notebooks/sweep_12h_er_Xqm_v3_.ipynb
+++ b/Notebooks/sweep_12h_er_Xqm_v3_.ipynb
@@ -81,7 +81,7 @@
       "\n",
       "\n",
       " --- SWEEP POINT 4/4: (2, 5) ---\n",
-      " --- time reamining: 30:52:46.63 \n",
+      " --- time reamining: 33:19:19.37 \n",
       "\n"
      ]
     }
@@ -183,7 +183,7 @@
     "        best_loss_test=model.results.loss_validation_epoch.best,\n",
     "        loss_validation=model.mean_loss_validation,\n",
     "        n_parameters=model.n_parameters,\n",
-    "        time_train=model.results.time_epoch.last,\n",
+    "        time_train=model.results.time_epoch.last,x\n",
     "    )\n",
     "    sweep.save(csv=False) #TODO: save csv=False automatically when sweep is already saved ion csv\n",
     "\n",
