--- a/Notebooks/_Connection.ipynb
+++ b/Notebooks/_Connection.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -86,13 +86,13 @@
       "remote: Counting objects: 100% (7/7), done.\u001b[K\n",
       "remote: Compressing objects: 100% (1/1), done.\u001b[K\n",
       "remote: Total 4 (delta 3), reused 4 (delta 3), pack-reused 0\u001b[K\n",
-      "Unpacking objects: 100% (4/4), 458 bytes | 76.00 KiB/s, done.\n",
+      "Unpacking objects: 100% (4/4), 395 bytes | 65.00 KiB/s, done.\n",
       "From github.com:raulconchello/peptide-QML\n",
-      "   d5ad3b8c9..87cc54447  main       -> origin/main\n",
-      "Updating d5ad3b8c9..87cc54447\n",
+      "   706aa8bdd..9187311f1  main       -> origin/main\n",
+      "Updating 706aa8bdd..9187311f1\n",
       "Fast-forward\n",
-      " my_code/helper_classes.py | 34 \u001b[32m++++++++++++++++++\u001b[m\u001b[31m----------------\u001b[m\n",
-      " 1 file changed, 18 insertions(+), 16 deletions(-)\n"
+      " my_code/helper_classes.py | 3 \u001b[32m++\u001b[m\u001b[31m-\u001b[m\n",
+      " 1 file changed, 2 insertions(+), 1 deletion(-)\n"
      ]
     }
    ],
@@ -135,18 +135,6 @@
    "display_name": "JL_Pennylane",
    "language": "python",
    "name": "jl_pennylane"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
