--- a/Notebooks/sweep_12h_er_Xqm_v3_.ipynb
+++ b/Notebooks/sweep_12h_er_Xqm_v3_.ipynb
@@ -183,7 +183,7 @@
     "        best_loss_test=model.results.loss_validation_epoch.best,\n",
     "        loss_validation=model.mean_loss_validation,\n",
     "        n_parameters=model.n_parameters,\n",
-    "        time_train=model.results.time_epoch.last,x\n",
+    "        time_train=model.results.time_epoch.last,\n",
     "    )\n",
     "    sweep.save(csv=False) #TODO: save csv=False automatically when sweep is already saved ion csv\n",
     "\n",
