--- a/Notebooks/-data_create_object.ipynb
+++ b/Notebooks/-data_create_object.ipynb
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_file_path = '{}/data/Scores/PE/PE_4AA_SCORES_polished.csv'.format(initial_path)\n",
+    "data_file_path = '{}/data/Scores/PE/PE_6AA_SCORES_polished.csv'.format(initial_path)\n",
     "string_list, number_list = f.read_data_file(\n",
     "    data_file_path,\n",
     "    skip_first_line=True, \n",
@@ -53,6 +53,7 @@
     "vector_list = np.array([f.string_to_numbers(string) for string in string_list]) \n",
     "\n",
     "# Create data object\n",
+    "n_aminoacids = 6\n",
     "data = c.Data(\n",
     "    x=vector_list,\n",
     "    y=score_list,\n",
@@ -61,9 +62,9 @@
     "    },\n",
     "    tensors_type_x = 'int',\n",
     "    tensors_type_y = 'float64',\n",
-    "    description='PE Scores for 4 amino acids; no geometry fixed',\n",
-    "    original_data_file='PE/PE_4AA_SCORES_polished.csv',\n",
-    "    n_aminoacids=4,\n",
+    "    description=f'PE Scores for {n_aminoacids} amino acids; no geometry fixed',\n",
+    "    original_data_file=f'PE/PE_{n_aminoacids}AA_SCORES_polished.csv',\n",
+    "    n_aminoacids=n_aminoacids,\n",
     ")"
    ]
   },
@@ -161,18 +162,6 @@
    "display_name": "JL_Pennylane",
    "language": "python",
    "name": "jl_pennylane"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
   }
  },
  "nbformat": 4,
