--- a/Notebooks/+tests.ipynb
+++ b/Notebooks/+tests.ipynb
@@ -486,13 +486,72 @@
    "source": [
     "wandb.log({\"acc\": 12, \"loss\": 20})"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "weights_shapes = [(6, 2)]\n",
+    "weights_sizes = [np.prod(shape) for shape in weights_shapes]\n",
+    "weights_size = np.sum(weights_sizes)\n",
+    "\n",
+    "def split_weights(weights):\n",
+    "    w = []\n",
+    "    for i in range(len(weights_sizes)):\n",
+    "        w.append(weights[:weights_sizes[i]].reshape(weights_shapes[i]))\n",
+    "        weights = weights[weights_sizes[i]:]\n",
+    "    return w\n",
+    "\n",
+    "weights = np.random.randn(weights_size)\n",
+    "x = split_weights(weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.20680581,  1.70509248],\n",
+       "       [-0.23903082, -0.75552226],\n",
+       "       [ 0.77779355,  1.09406288],\n",
+       "       [ 0.6119949 , -1.97877027],\n",
+       "       [-0.85688343, -1.25664143],\n",
+       "       [ 0.45412062,  0.22179532]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[0]"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "JL_Pennylane",
+   "display_name": "PennyLane",
    "language": "python",
-   "name": "jl_pennylane"
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
