--- a/Notebooks/-data_create_object.ipynb
+++ b/Notebooks/-data_create_object.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -37,11 +37,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_file_path = '{}/data/Scores/PE/PE_6AA_SCORES_polished.csv'.format(initial_path)\n",
+    "data_file_path = '{}/data/Scores/PE/PE_4AA_SCORES_polished.csv'.format(initial_path)\n",
     "string_list, number_list = f.read_data_file(\n",
     "    data_file_path,\n",
     "    skip_first_line=True, \n",
@@ -70,20 +70,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(UUID('d33f26cf-dd5b-4712-8e44-62df3529f5ff'),\n",
+       "(UUID('c88ccd8d-e941-4244-b754-8321da27c6e7'),\n",
        " torch.Size([4779, 4]),\n",
        " torch.Size([4779, 1]),\n",
        " torch.Size([531, 4]),\n",
        " torch.Size([531, 1]))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,34 +94,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.save(initial_path=initial_path, file_name='PE_SCORES_4_Numbers')"
+    "data.save(initial_path=initial_path, file_name='PE_SCORES_6_Numbers')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_data = c.Data.load(initial_path=initial_path, file_name='PE_SCORES_4_Numbers')"
+    "new_data = c.Data.load(initial_path=initial_path, file_name='PE_SCORES_6_Numbers')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "UUID('d33f26cf-dd5b-4712-8e44-62df3529f5ff')"
+       "UUID('c88ccd8d-e941-4244-b754-8321da27c6e7')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "        [14, 12, 11,  7]], dtype=torch.int32)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,6 +162,18 @@
    "display_name": "JL_Pennylane",
    "language": "python",
    "name": "jl_pennylane"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
